# mod_math

./: .clang-format  CMakeLists.txt  README.md
include/: mod_math.hpp
include/impl/: mod_math.inc.cpp
src/: mod_math.cpp
test/: CMakeLists.txt  test.cpp  test_common.hpp  test_comparison.cpp  test_constructor.cpp  test_expression.cpp
